# mltree2code

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
docs/: extending.md  ir.md  testing.md
examples/: datacamp_diabetes_common.py  datacamp_diabetes_demo.py  iris_demo.py
examples/data/: README.md
mltree2code/: __init__.py  __main__.py  cli.py  emitter.py  exceptions.py  ir.py  loader.py  optimizer.py  parser.py
mltree2code/generators/: __init__.py  base.py  c.py  cpp.py  formatter.py  java.py  javascript.py  micropython.py  python.py  rust.py
mltree2code/utils/: __init__.py  formatting.py
scripts/: benchmark_diabetes.py  benchmark_inference.py  compare_diabetes_quality.py  generate_models.py
tests/: conftest.py  model_fixtures.py
tests/golden/: test_golden.py
tests/integration/: test_cli.py  test_datacamp_diabetes.py  test_deep_tree.py  test_diabetes_quality.py  test_equivalence.py
tests/models/: .gitignore
tests/performance/: test_inference_speed.py
tests/unit/: test_emitter.py  test_generators.py  test_ir.py  test_loader.py  test_model_fixtures.py  test_optimizer.py  test_parser.py
